Fix half of the scrollbars

--- a/website/src/pages/marketplace/_components/MarketplaceCard/styles.module.css
+++ b/website/src/pages/marketplace/_components/MarketplaceCard/styles.module.css
@@ -33,7 +33,7 @@
 
 .marketplaceCardRules {
     max-height: 300px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .tagContainer {
